feat: created the Login and Register screens

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,27 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.gradle/
+build/
+**/build/
+.cxx/
+.externalNativeBuild/
+
 local.properties
+gradle.properties
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+.DS_Store
+Thumbs.db
+
+*.jks
+*.keystore
+
+*.apk
+*.ap_
+*.aab
+
+*.log
+
+captures/
