feat: add token management for logged users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-                <data android:scheme="io.supabase.ingredicheck" />
+                <data android:scheme="com.example.lsmapp"
+                    android:host="callback"/>
             </intent-filter>
         </activity>
     </application>
